--- a/Water My Plants/index.html
+++ b/Water My Plants/index.html
@@ -29,7 +29,8 @@
           </p>
           <ul class="actions">
             <li>
-              <button class="button primary">Sign In</button>
+              <a href='https://marketing-pages-chi.vercel.app/index.html' class='button primary'>Sign In</a>
+              <!-- <button class="button primary">Sign In</button> -->
             </li>
             <li>
               <a href="#first" class="arrow scrolly"
