--- a/Water My Plants/index.html
+++ b/Water My Plants/index.html
@@ -29,7 +29,7 @@
           </p>
           <ul class="actions">
             <li>
-              <a href='https://marketing-pages-chi.vercel.app/index.html' class='button primary'>Sign In</a>
+              <a href='https://water-my-plants-beta.vercel.app/Signup' class='button primary'>Sign In</a>
               <!-- <button class="button primary">Sign In</button> -->
             </li>
             <li>
